# connector-builder

./: .gitignore  README.md  main.py  rawStrings.py
.github/workflows/: main.yml
connector-builder/: .gitignore  Cargo.toml
connector-builder/src/: main.rs
templates/: Cargo.toml  main.rs
