[package]
name = "connector-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json            = "0.12.4"
reqwest         = { version = "0.10.7", features = ["blocking"] }
anyhow          = "1.0.32"
openssl = { version = "0.10", features = ["vendored"] }